Fix compile warning (bug #32047)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@181428 c90b9560-bf6c-de11-be94-00142212c4b1